# netbox-routing

./: .pre-commit-config.yaml  MANIFEST.in  README.md  local_requirements.txt  pyproject.toml  ruff.toml  setup.py
.github/: configuration.testing.py  release-drafter.yml
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  feature_request.yaml
.github/ISSUE_TEMPLATRE/: bug_report.yaml
.github/workflows/: ci-tests.yml  ci.yml  pr_approval.yml  pypi.yml
netbox_routing/: __init__.py  navigation.py  urls.py
netbox_routing/api/: serializers.py  urls.py
netbox_routing/choices/: __init__.py  base.py  bgp.py  eigrp.py  objects.py  ospf.py
netbox_routing/constants/: __init__.py  bgp.py  eigrp.py  objects.py
netbox_routing/fields/: generic.py  ip.py
netbox_routing/filtersets/: __init__.py  bgp.py  communities.py  community.py  eigrp.py  objects.py  ospf.py  static.py
netbox_routing/forms/: __init__.py  base.py  bgp.py  communities.py  community.py  eigrp.py  fields.py  mixins.py  objects.py  ospf.py  static.py
netbox_routing/graphql/: filter_mixins.py  filters.py  schema.py  types.py  types_mixin.py
netbox_routing/migrations/: 0001_initial.py  0002_netboxmodel_updates.py  0003_model_ordering_and_constraints.py  0004_alter_prefixlistentry_ge_alter_prefixlistentry_le.py  0005_ospf.py  0006_bgp.py  0007_bgpsessiontemplate_asn_bgpsessiontemplate_bfd_and_more.py  0008_convert_to_primarymodel.py  0009_alter_staticroute_metric_alter_staticroute_permanent.py  0010_eigrp.py  0011_osfp_passive_interface.py  0012_osfp_instance_vrf.py  0014_bgppeers.py  (+56 more)
(+190 files in other folders)
