[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-routing"
authors = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"}
]
maintainers = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"},
]
description = "A NetBox Routing Plugin"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netbox-plugin", ]
version = "0.3.1"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'django-polymorphic',
]

[project.urls]
Documentation = "https://github.com/dansheps/netbox-routing/blob/main/README.md"
Source = "https://github.com/dansheps/netbox-routing"
Tracker = "https://github.com/dansheps/netbox-routing/issues"

[tool.setuptools.packages.find]
exclude=["netbox_routing.tests"]

[tool.black]
skip-string-normalization = 1
